--- a/src/apps/product/templates/product_list.html
+++ b/src/apps/product/templates/product_list.html
@@ -1,11 +1,12 @@
 {% extends 'base.html' %}
 
+
 {% block content %}
 
 <main class="main">
     <div class="page-header text-center" style="background-image: url('assets/images/page-header-bg.jpg')">
         <div class="container">
-            <h1 class="page-title">Grid 4 Columns<span>Shop</span></h1>
+            <h1 class="page-title"><span>Shop</span></h1>
         </div><!-- End .container -->
     </div><!-- End .page-header -->
     <nav aria-label="breadcrumb" class="breadcrumb-nav mb-2">
@@ -94,8 +95,8 @@
                                 <div class="product product-7 text-center">
                                     <figure class="product-media">
                                         <span class="product-label label-new">New</span>
-                                        <a href="product.html">
-                                            <img src="{{ p.main_image }}" alt="Product image" class="product-image">
+                                        <a href="{% url 'product_detail' p.pk %}">
+                                            <img src="{{p.main_image}}" alt="Product image" class="product-image">
                                         </a>
 
                                         <div class="product-action-vertical">
@@ -113,7 +114,7 @@
                                         <div class="product-cat">
                                             <a href="#">{{p.category.name}}</a>
                                         </div><!-- End .product-cat -->
-                                        <h3 class="product-title"><a href="product.html">{{p.title}}</a></h3><!-- End .product-title -->
+                                        <h3 class="product-title"><a href="product.html">{{ p.title }}</a></h3><!-- End .product-title -->
                                         <div class="product-price">
                                             ${{p.price}}
                                         </div><!-- End .product-price -->
@@ -124,9 +125,11 @@
                                             <span class="ratings-text">( 2 Reviews )</span>
                                         </div><!-- End .rating-container -->
 
+                                       
                                     </div><!-- End .product-body -->
                                 </div><!-- End .product -->
-                            </div><!-- End .col-sm-6 col-lg-4 col-xl-3 -->
+                            </div>
+                            
                             {% endfor %}
 
                         </div><!-- End .row -->
