--- a/src/apps/product/templates/product_list.html
+++ b/src/apps/product/templates/product_list.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-
+{% load static %}
 
 {% block content %}
 
@@ -100,7 +100,7 @@
                                         </a>
 
                                         <div class="product-action-vertical">
-                                            <a href="#" class="btn-product-icon btn-wishlist btn-expandable"><span>add to wishlist</span></a>
+                                            <a href="{% url 'add_favorite' p.id %}" class="btn-product-icon btn-wishlist btn-expandable" data-product_id="{{p.id}}"><span>add to wishlist</span></a>
                                             <a href="popup/quickView.html" class="btn-product-icon btn-quickview" title="Quick view"><span>Quick view</span></a>
                                             <a href="#" class="btn-product-icon btn-compare" title="Compare"><span>Compare</span></a>
                                         </div><!-- End .product-action-vertical -->
@@ -411,3 +411,7 @@
 </main>
 
 {% endblock %}
+
+<!-- {% block js %}
+    <script src="{% static 'assets/wishlist.js' %}"></script>
+{% endblock %} -->
