--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -111,10 +111,10 @@
                     </div><!-- End .header-left -->
 
                     <div class="header-right">
-                        <a href="wishlist.html" class="wishlist-link">
+                        <a href="{% url 'favorites_detail' %}" class="wishlist-link">
                             <i class="icon-heart-o"></i>
-                            <span class="wishlist-count">3</span>
-                            <span class="wishlist-txt">My Wishlist</span>
+                            <span class="wishlist-count">{{ request.user.favorites.count }}</span>
+                            <span class="wishlist-txt">Избранное</span>
                         </a>
 
                         <div class="dropdown cart-dropdown">
@@ -364,6 +364,9 @@
     <!-- Main JS File -->
     <script src="{% static 'assets/js/main.js' %}"></script>
     <script src="{% static 'assets/js/demos/demo-6.js' %}"></script>
+    {% block js %}
+
+    {% endblock %}
 </body>
 
 
