--- a/src/apps/product/templates/product_list.html
+++ b/src/apps/product/templates/product_list.html
@@ -106,7 +106,7 @@
                                         </div><!-- End .product-action-vertical -->
 
                                         <div class="product-action">
-                                            <a href="#" class="btn-product btn-cart"><span>add to cart</span></a>
+                                            <a href="{% url 'add_cart' p.id %}" class="btn-product btn-cart"><span>Добавить в корзину</span></a>
                                         </div><!-- End .product-action -->
                                     </figure><!-- End .product-media -->
 
